[project]
name = "deepparse"
version = "0.1.0"
description = "agentic engine engine to transform raw, freeform text into structured data"
authors = [
    {name = "Abhishek Ranjan", email = "aviranjan444@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph (>=0.5.4,<0.6.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.72,<0.4.0)",
    "instructor (>=1.10.0,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
